--- a/templates/opinion.html
+++ b/templates/opinion.html
@@ -19,7 +19,7 @@
           </p>
           <p>
             Ссылка для друзей:
-            <a href=""></a>
+            <a href="{{ url_for('opinion_view', opinion_id=opinion.id, _external=True)}}">{{ url_for('opinion_view', opinion_id=opinion.id, _external=True) }}</a>
           </p>
         </div>
         <div class="col-12 col-lg-5">
