--- a/templates/add_opinion.html
+++ b/templates/add_opinion.html
@@ -16,18 +16,27 @@
               {% endfor %}
             {% endif %}
           </p>
-          {{ form.source(class="form-control form.control-lg py-3 mb-3", placeholder=form.source.label.text) }}
+          {{ form.source(class="form-control form-control-lg py-3 mb-3", placeholder=form.source.label.text) }}
           <p></p>
-          {{ form.text(class="form-control form.control-lg py-3 mb-3", placeholder=form.text.label.text, rows="3", cols="40") }}
-          <p class="text-danger">
+          {{ form.text(class="form-control form-control-lg py-3 mb-3", placeholder=form.text.label.text, rows="3", cols="40")}}
+          <p>
             {% if form.text.errors %}
               {% for error in form.text.errors %}
-                {{ error }}
+                <span style="color: red">{{ error }}</span>
               {% endfor %}
             {% endif %}
           </p>
           {{ form.submit(class="button px-5 py-3 btn") }}
-        </form>        
+        </form>
+        <p class="py-3 mb-3">
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              {% for message in messages %}
+                {{ message }}
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
+        </p>     
       </div>
       <div class="col-12 col-lg-5">
         <img
