--- a/templates/add_opinion.html
+++ b/templates/add_opinion.html
@@ -25,18 +25,18 @@
                 <span style="color: red">{{ error }}</span>
               {% endfor %}
             {% endif %}
+            <p class="py-3 mb-3">
+              {% with messages = get_flashed_messages(category_filter=["free-message"]) %}
+                {% if messages %}
+                  {% for message in messages %}
+                    {{ message }}
+                  {% endfor %}
+                {% endif %}
+              {% endwith %}
+            </p>
           </p>
           {{ form.submit(class="button px-5 py-3 btn") }}
         </form>
-        <p class="py-3 mb-3">
-          {% with messages = get_flashed_messages() %}
-            {% if messages %}
-              {% for message in messages %}
-                {{ message }}
-              {% endfor %}
-            {% endif %}
-          {% endwith %}
-        </p>     
       </div>
       <div class="col-12 col-lg-5">
         <img
